
appId: com.onyx.app
---
- assertVisible: "Username"
- tapOn: "Username"
- inputText: ${USERNAME}
- back
- assertVisible: "Password"
- tapOn: "Password"
- inputText: ${PASSWORD}
- back
- assertVisible: "Connection"
- tapOn: "Connection"